Fixing the pre-code wrapping

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -71,6 +71,10 @@ body > footer {
 
 pre {
   font-size: 14px;
+
+  code {
+    white-space: pre;
+  }
 }
 
 .archive-row {
